Create a dummy texture when the mailbox is invalid in CreateAndConsumeTexture.

If glCreateAndConsumeTextureINTERNAL fails to find a mailbox, the client still
expects the texture ID to be valid.  If the texture does not exist, the ID could
overlap with another and display incorrect textures.

BUG=851878

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I53cea969fcace7246ebce8fc193b3246f511fbc3
Reviewed-on: https://chromium-review.googlesource.com/1129464
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573719}
Former-commit-id: 216b18af80890c27d26bf881c68ee59dac996027